--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "morgan": "^1.0.0",
     "mongodb": "*",
     "mongoose": "*",
-    "dotenv":"*",
-    "youtube-api": "^0.3.2"
+    "dotenv": "*",
+    "youtube-api": "^0.3.2",
+    "body-parser": "^1.12.0"
   },
   "engines": {
     "node": "0.10.x",
