--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "mongoose": "*",
     "dotenv": "*",
     "youtube-api": "^0.3.2",
-    "body-parser": "^1.12.0"
+    "body-parser": "^1.12.0",
+    "jwt-simple": "~0.2.0",
+    "underscore": "~1.6.0"
   },
   "engines": {
     "node": "0.10.x",
